html table tag added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,84 @@
 
    <audio controls src="Mohbad---Beast-&-Peace.mp3"></audio>
    <video controls src="Asake-2-30-Video-(TunezJam.com).mp4"></video>
-   <iframe width="688" height="387" src="https://www.youtube.com/embed/Iqo6jCbRIjw" title="GATEMAN CAUGHT IN THE KITCHEN | MR MACARONI | IMABONG | SAPAGOTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   <iframe width="567" height="300" src="https://www.youtube.com/embed/Iqo6jCbRIjw" title="GATEMAN CAUGHT IN THE KITCHEN | MR MACARONI | IMABONG | SAPAGOTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   <br>
+   <br>
+   <br> 
+   <table border="2">
+        <tr>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Email</th>
+            <th>Profession</th>
+            <th>Course studied</th>
+            <th>phonenumber</th>
+        </tr>
+
+        <tr>
+            <td>Bolaji</td>
+            <td>Jacob</td>
+            <td>bolajialabi104@gmail.com</td>
+            <td>Fullstack developper</td>
+            <td>Material science</td>
+            <td>09151501837</td>
+        </tr>
+        <tr>
+            <td>Godwin</td>
+            <td>Chukwu</td>
+            <td>leocchukwu@gmail.com</td>
+            <td>Fullstack developper</td>
+            <td>Computer science</td>
+            <td>08179499919</td>
+        </tr>
+        <tr>
+            <td>christian</td>
+            <td>okeke</td>
+            <td>ochike41@gmail.com</td>
+            <td>student</td>
+            <td>economics</td>
+            <td>08182152632</td>
+        </tr>
+        <tr>
+            <td>nzube</td>
+            <td>Wisdom</td>
+            <td>nzubechukwuwisdom794@gmail.com</td>
+            <td>Business</td>
+            <td>Business Admin</td>
+            <td>08166814470</td>
+        </tr>
+        <tr>
+        <td>olabanji</td>
+        <td>Lateef</td>
+        <td>olabanjilateef@gmail.com</td>
+        <td>student</td>
+        <td>commercial student</td>
+        <td>09071727838</td>
+        </tr>
+        <tr>
+            <td>Bobmanuel</td>
+            <td>Ogbuokiri</td>
+            <td>bobbyorr007@gmail.com</td>
+            <td>Web developper</td>
+            <td>Material science</td>
+            <td>08052298391</td>
+        </tr>
+        <tr>
+            <td>Bose</td>
+            <td>Aletogbe</td>
+            <td>irawomartins@gmail.com</td>
+            <td>Fashion designer</td>
+            <td>Agric econs and extension</td>
+            <td>07037710032</td>
+        </tr>
+        <tr>
+            <td>Rojjah</td>
+            <td>Temitope</td>
+            <td>rojjah@loc-itude.com</td>
+            <td>Trichologist</td>
+            <td>Tricology</td>
+            <td>09061213256</td>
+        </tr>
+    </table>
 </body>
 </html>
