html form added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
    </ol>
 
    <audio controls src="Mohbad---Beast-&-Peace.mp3"></audio>
+   <br>
    <video controls src="Asake-2-30-Video-(TunezJam.com).mp4"></video>
+   <br>
    <iframe width="567" height="300" src="https://www.youtube.com/embed/Iqo6jCbRIjw" title="GATEMAN CAUGHT IN THE KITCHEN | MR MACARONI | IMABONG | SAPAGOTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
    <br>
    <br>
@@ -112,6 +114,62 @@
             <td>Tricology</td>
             <td>09061213256</td>
         </tr>
+        <tr>
+            <td>Daniel</td>
+            <td>Okeowo</td>
+            <td>okeworld78@gmail.com</td>
+            <td>student</td>
+            <td>commercial student</td>
+            <td>09115880821</td>
+        </tr>
     </table>
+<br>
+<br>
+<br>
+
+    <form action=""> 
+        <label for="">Fullname</label>
+        <input type="text" placeholder="Enter your Fullname">
+        <br>
+        <label for="">Email</label>
+        <input type="email" placeholder="enter your email">
+        <br>
+        <label for="">password</label>
+        <input type="password" placeholder="enter your password">
+        <br>
+        <label for="">age</label>
+        <input type="number" placeholder="enter your age">
+        <br>
+        <label for="">phonenumber</label>
+        <input type="phone number" placeholder="enter your phone number">
+        <br>
+        <label for="">Date of birth</label>
+        <input type="date" placeholder="enter your date of birth">
+        <br>
+        <input type="submit">
+
+    </form>
+    <br>
+    <form action="">
+        <select name="" id="">
+            <option value="">HTML</option>
+            <option value="">CSS</option>
+            <option value="">JAVASCRIPT</option>
+            <option value="">DATABASE</option>
+        </select>
+        <textarea name="cs" id="" cols="30" rows="10"></textarea>
+        <br>
+        <input type="radio">
+        <label for="">HTML</label>
+        <br>
+        <input type="radio">
+        <label for="">CSS</label>
+        <br>
+        <input type="radio">
+        <label for="">JAVASCRIPT</label>
+        <br>
+        <input type="radio">
+        <label for="">DATABASE</label>
+    </form>
 </body>
 </html>
